update: Mobile adaptation, password strength
Updated password validation
Added favicon
Media queries for mobile view

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Christopher's Digital Solutions - Dashboard</title>
     <script src="/js/superUtilBase.js"></script>
     <script src="/js/dashboard.js"></script>
@@ -12,7 +13,7 @@
 <body>
     <div class="fullScreenWrapper"></div>
     <div class="navBar">
-        <span class="logo" onclick="window.location='/';">Christopher's Digital Solutions - Dashboard</span>
+        <span class="logo" onclick="window.location='/';">Christopher's Digital Solutions</span>
         <div class="navList">
             <ul>
                 <li onclick="window.location='/dashboard'"><u>Dashboard</u></li>
