update: Update Roles
Add upload and delete privileges to the perspective roles.
General fixes.
Update password validator in registerController

--- a/pages/adminDashboard.html
+++ b/pages/adminDashboard.html
@@ -125,7 +125,7 @@
         </div>
     </div>
     <div class="mainContent">
-        <h1>Admin Dashboard</h1>
+        <h1>Administrator Dashboard</h1>
         <h3>Welcome <span class="usersName">user</span>.</h3>
         <button onclick="dashboard.editName();">Edit Name</button>
         <button onclick="dashboard.openChangePasswordModal();">Change Password</button>
