--- a/pages/filemanager.html
+++ b/pages/filemanager.html
@@ -39,6 +39,9 @@
         <br>
         <br>
         <br>
+        <div class="currentPath"></div>
+        <br>
+        <br>
         <div class="driveContentsWrapper">
             <ul></ul>
         </div>
