--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -18,7 +18,7 @@
             <ul>
                 <li onclick="window.location='/dashboard'"><u>Dashboard</u></li>
                 <li onclick="window.location='/dashboard/filemanager'">File Manager</li>
-                <li onclick="window.location='/dashboard/interactive'">Interactive</li>
+                <li onclick="window.location='/dashboard/messages'">Messages</li>
                 <li onclick="window.location='/logout'">Logout</li>
             </ul>
         </div>
