--- a/pages/filemanager.html
+++ b/pages/filemanager.html
@@ -19,7 +19,7 @@
             <ul>
                 <li onclick="window.location='/dashboard'">Dashboard</li>
                 <li onclick="window.location='/dashboard/filemanager'"><u>File Manager</u></li>
-                <li onclick="window.location='/dashboard/interactive'">Interactive</li>
+                <li onclick="window.location='/dashboard/messages'">Messages</li>
                 <li onclick="window.location='/logout'">Logout</li>
             </ul>
         </div>
