Update: Begin Tasker
Add new files and basic foundation for Tasker portion of the application.
General fixes and enhancements
Layout more for completing Tasker methods

--- a/pages/adminDashboard.html
+++ b/pages/adminDashboard.html
@@ -119,6 +119,7 @@
                 <li onclick="window.location='/dashboard'"><u>Dashboard</u></li>
                 <li onclick="window.location='/dashboard/filemanager'">File Manager</li>
                 <li onclick="window.location='/dashboard/messages'">Messages</li>
+                <li onclick="window.location='/dashboard/tasker'">Tasker</li>
                 <li onclick="window.location='/logout'">Logout</li>
             </ul>
         </div>
