--- a/pages/filemanager.html
+++ b/pages/filemanager.html
@@ -20,6 +20,7 @@
                 <li onclick="window.location='/dashboard'">Dashboard</li>
                 <li onclick="window.location='/dashboard/filemanager'"><u>File Manager</u></li>
                 <li onclick="window.location='/dashboard/messages'">Messages</li>
+                <li onclick="window.location='/dashboard/tasker'">Tasker</li>
                 <li onclick="window.location='/logout'">Logout</li>
             </ul>
         </div>
