--- a/pages/messages.html
+++ b/pages/messages.html
@@ -23,6 +23,7 @@
                 <li onclick="window.location='/dashboard'">Dashboard</li>
                 <li onclick="window.location='/dashboard/filemanager'">File Manager</li>
                 <li onclick="window.location='/dashboard/messages'"><u>Messages</u></li>
+                <li onclick="window.location='/dashboard/tasker'">Tasker</li>
                 <li onclick="window.location='/logout'">Logout</li>
             </ul>
         </div>
