Update: Finish Tasker Basic Functionality
Complete basic tasker use. All working functions and routes.
Prepare Team Tasks functionality
Enhancements in Messages

--- a/pages/messages.html
+++ b/pages/messages.html
@@ -32,7 +32,7 @@
         <h1>Messages</h1>
         Welcome to Messages. You can interact live with other users. Check out the Web Socket programs below.
         <div class="interactiveActions">
-            <button onclick="messagesControl.getMyMessages();">My Messages</button>
+            <button id="getMyMessagesBtn" onclick="messagesControl.getMyMessages();">My Messages</button>
             <button onclick="interactive.showUsers();">Show Users</button>
             <button onclick="interactive.showGlobalChat();">Global Chat</button>
         </div>
