--- a/pages/tasker.html
+++ b/pages/tasker.html
@@ -9,8 +9,8 @@
     <script src="/js/superUtilBase.js"></script>
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/tasker.js"></script>
-    <!-- <script src="/js/lodash.js"></script>
-    <script src="/js/moment.js"></script> -->
+    <!-- <script src="/js/lodash.js"></script> -->
+    <script src="/js/moment.js"></script>
     <link rel="stylesheet" href="/css/tasker.css">
 </head>
 <body>
@@ -40,26 +40,28 @@
         </div>
         <div class="singleTaskWrapper">
             <input type="hidden" id="singleTaskId">
-            <h2></h2>
+            <h1></h1>
             <div class="taskDetails"></div>
             <button onclick="tasker.editNameTitle(this);">Edit</button>
             <p>
-                <h3>Task Steps:</h3> 
-                <div class="taskSteps"></div>
-                <button onclick="tasker.addTaskStep(this);">Add +</button>
+                <h2>Task Steps:</h2> 
+                <div class="taskSteps"><ul></ul></div>
+                <button onclick="tasker.addTaskStep(this);">Add Step +</button>
             </p>
+            <br>
             <p>
-                <h3>Task Members:</h3>
-                <div class="taskMembers"></div>
-                <button onclick="tasker.addMember(this);">Add +</button>
+                <h2>Task Members:</h2>
+                <div class="taskMembers"><ul></ul></div>
+                <button onclick="tasker.addMember(this);">Add Member +</button>
             </p>
+            <br>
             <p>
-                <h3>Task Status</h3>
+                <h2>Task Status:</h2>
                 <div class="taskStatus"></div>
-                <button onclick="tasker.markComplete(this);">Mark Complete</button>
             </p>
+            <br>
             <p>
-                <h3>Delete Task</h3>
+                <h2>Delete Task:</h2>
                 <button onclick="tasker.deleteTask(this);">Delete</button>
             </p>
         </div>
