Update: Add Team Tasks
Complete Tasker by adding Team Tasks. Allow for read only view which updates during live edit.

--- a/pages/tasker.html
+++ b/pages/tasker.html
@@ -65,6 +65,31 @@
                 <button onclick="tasker.deleteTask(this);">Delete</button>
             </p>
         </div>
+
+        <div class="teamTasksWrapper">
+            <ul></ul>
+        </div>
+        <div class="singleTeamTask">
+            <input type="hidden" id="singleTaskId">
+            <h1></h1>
+            <div class="taskDetails"></div>
+            <p>
+                <h2>Task Steps:</h2> 
+                <div class="taskSteps"><ul></ul></div>
+            </p>
+            <br>
+            <p>
+                <h2>Task Members:</h2>
+                <div class="taskMembers"><ul></ul></div>
+            </p>
+            <br>
+            <br>
+            <p>
+                <h2>Task Status:</h2>
+                <div class="taskStatus"></div>
+            </p>
+            <br>
+        </div>
     </div>
 </body>
 </html>
