--- a/pages/basicUserFileManager.html
+++ b/pages/basicUserFileManager.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Christopher's Digital Solutions - File Manager</title>
+    <title>Moditta Rover  - File Manager</title>
     <script src="/js/superUtilBase.js"></script>
     <script>
         var superUtil = new SuperUtil();
@@ -18,6 +18,22 @@
                 }, (1000*60)*5);
 
                 getDrives();
+                document.addEventListener("DOMContentLoaded", function(){
+                    // Get Theme
+                    superUtil.grabJSON("/api/dashboard/getTheme", function (status, data) {
+                        if(status == 200){
+                            if(!data.uiTheme){
+                                superUtil.appUiTheme = "Charcoal";
+                                superUtil.applyUiTheme();
+                            } else {
+                                superUtil.appUiTheme = data.uiTheme;
+                                superUtil.applyUiTheme();
+                            }
+                        } else {
+                            console.log(status, "There was an error", data);
+                        }
+                    });
+                });
             };
             this.isDownloading = false;
 
@@ -117,10 +133,65 @@
                     } else {
                         // Handle Error messages
                         document.querySelector('.fullScreenWrapper').style.display = "none";
+                        alert(data.message);
                         console.log(status);
                         console.log(data);
                     }
                 }, 'POST');
+            };
+
+            this.downloadFileFromPath = function downloadFileFromPath(downloadPath){
+                document.querySelector(".downloadButton").disabled = true;
+                document.querySelector(".downloadButton").style.opacity = '.5';
+                document.querySelector(".deleteFileButton").disabled = true;
+                document.querySelector(".deleteFileButton").style.opacity = '.5';
+                //
+                superUtil.sendJSON({requestFile:downloadPath}, '/api/dashboard/filemanager/downloadFileFromPath', function (status, data){
+                    if(status == 200){
+                        downloadFile({requestFile:downloadPath}, '/api/dashboard/filemanager/downloadFileFromPath', 'POST');
+                    } else {
+                        document.querySelector(".downloadStatusMessages").innerHTML = "<span class='red'>"+data.message+"</span>";
+                    }
+                },"POST");
+                function downloadFile(postData, address, postType){
+                    that.isDownloading = true;
+                    var xhr = new XMLHttpRequest();
+                    var url = address;
+                    var getFilename = function (str) {
+                        return str.substring(str.lastIndexOf('/')+1);
+                    }
+                    //
+                    xhr.open(postType, url, true);
+                    xhr.setRequestHeader("Content-type", "application/json");
+                    xhr.responseType = 'blob';
+                    xhr.addEventListener("progress", function (e){
+                        if(e.lengthComputable) {
+                            var percentComplete = e.loaded / e.total * 100;
+                            //
+                            document.querySelector(".downloadProgress").style.width = (percentComplete+ "%");
+                            document.querySelector(".downloadProgress div").innerHTML = (Math.round(percentComplete)+ "%");
+                        } else {
+                            // unable to compute progress information since the total size is unknown
+                        }
+                    })
+                    xhr.onreadystatechange = function (e) {
+                        if(xhr.response != undefined){
+                            that.isDownloading = false;
+                            var fileName = getFilename(postData.requestFile);
+                            var fileUrl = window.URL.createObjectURL(xhr.response);
+                            var fileLink = document.createElement('a');
+                            fileLink.href = fileUrl;
+                            fileLink.setAttribute("download",fileName);
+                            fileLink.setAttribute("target","_blank");
+                            document.body.appendChild(fileLink);
+                            fileLink.click();
+                            fileLink.remove();
+                            document.querySelector('.fullScreenWrapper').style.display = 'none';
+                        }
+                    }
+                    var data = JSON.stringify(postData);
+                    xhr.send(data);
+                };
             };
 
             this.closeModal = function closeModal(){
@@ -151,12 +222,12 @@
         fileManager.init();
     </script>
     <link rel="stylesheet" href="/css/main.css">
-   
+    <link rel="stylesheet" id="cssThemes" href="#">
 </head>
 <body>
     <div class="fullScreenWrapper"></div>
     <div class="navBar">
-        <span class="logo" onclick="window.location='/';">Christopher's Digital Solutions</span>
+        <span class="logo" onclick="window.location='/';">Moditta Rover </span>
         <div class="navList">
             <ul>
                 <li onclick="window.location='/dashboard'">Dashboard</li>
@@ -169,9 +240,11 @@
     </div>
     <div class="mainContent">
         <h1>File Manager</h1>
-        Welcome to File Manager. You can view available drives and upload files.
+        Welcome to File Manager.
         <div class="filemanagerActions">
-            <i>You cannot upload files as a Basic user.</i>
+            <i>You cannot upload or download files as a Basic user.</i>
+            <br>
+            <i>You must contact your administrator to be able to view files.</i>
         </div>
         <br>
         <div class="displayDrives">
