--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Christopher's Digital Solutions - Dashboard</title>
+    <title>Moditta Rover  - Dashboard</title>
     <script src="/js/superUtilBase.js"></script>
     <script src="/js/dashboard.js"></script>
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" id="cssThemes" href="#">
 </head>
 <body>
     <div class="fullScreenWrapper"></div>
     <div class="navBar">
-        <span class="logo" onclick="window.location='/';">Christopher's Digital Solutions</span>
+        <span class="logo" onclick="window.location='/';">Moditta Rover </span>
         <div class="navList">
             <ul>
                 <li onclick="window.location='/dashboard'"><u>Dashboard</u></li>
@@ -25,10 +26,14 @@
         </div>
     </div>
     <div class="mainContent">
+        <img id="dashboardAvatar" src="/img/default-image.png" alt="Avatar" onclick="dashboard.updateAvatarModal();">
         <h1>Dashboard</h1>
         <h3>Welcome <span class="usersName">user</span>.</h3>
         <button onclick="dashboard.editName();">Edit Name</button>
         <button onclick="dashboard.openChangePasswordModal();">Change Password</button>
+        <button onclick="dashboard.updateThemeModal();">UI Color Theme</button>
+        <button onclick="dashboard.updateMobileModal();">Mobile</button>
+        <button onclick="dashboard.updateAvatarModal();">Edit Avatar</button>
     </div>
 </body>
 </html>
