--- a/pages/filemanager.html
+++ b/pages/filemanager.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Christopher's Digital Solutions - File Manager</title>
+    <title>Moditta Rover  - File Manager</title>
     <script src="/js/superUtilBase.js"></script>
     <script src="/js/fileManager.js"></script>
     <link rel="stylesheet" href="/css/main.css">
-   
+    <link rel="stylesheet" id="cssThemes" href="#">
 </head>
 <body>
     <div class="fullScreenWrapper"></div>
     <div class="navBar">
-        <span class="logo" onclick="window.location='/';">Christopher's Digital Solutions</span>
+        <span class="logo" onclick="window.location='/';">Moditta Rover </span>
         <div class="navList">
             <ul>
                 <li onclick="window.location='/dashboard'">Dashboard</li>
@@ -27,7 +27,7 @@
     </div>
     <div class="mainContent">
         <h1>File Manager</h1>
-        Welcome to File Manager. You can view available drives and upload files.
+        Welcome to File Manager. You can view available drives, download and upload files.
         <div class="filemanagerActions">
             <button onclick="fileManager.uploadFileModal();">Upload Files</button>
         </div>
