--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Christopher's Digital Solutions</title>
+    <title>Moditta Rover </title>
     <script src="/socket.io/socket.io.js"></script>
     <script type="module" src="js/main.js"></script>
+    <script src="/js/superUtilBase.js"></script>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" id="cssThemes" href="#">
 </head>
 <body>
     <div class="navBar">
-        <span class="logo">Christopher's Digital Solutions</span>
+        <span class="logo">Moditta Rover </span>
         <div class="navList">
             <ul>
                 <li onclick="window.location='/login'">Login</li>
