Update created by

--- a/pages/tasker.html
+++ b/pages/tasker.html
@@ -43,6 +43,9 @@
             <input type="hidden" id="singleTaskId">
             <h1></h1>
             <div class="taskDetails"></div>
+            <br>
+            <span><b>Created by: </b><span class="taskCreator"></span></span>
+            <br>
             <button onclick="tasker.editNameTitle(this);">Edit</button>
             <p>
                 <h2>Task Steps:</h2> 
@@ -74,6 +77,9 @@
             <input type="hidden" id="singleTaskId">
             <h1></h1>
             <div class="taskDetails"></div>
+            <br>
+            <span><b>Created by: </b><span class="taskCreator"></span></span>
+            <br>
             <br>
             <p>
                 <h2>Task Steps:</h2>
